[package]
name = "cratestack-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["decimal-rust-decimal"]
decimal-rust-decimal = [
    "cratestack-core/decimal-rust-decimal",
    "cratestack-sql/decimal-rust-decimal",
    "dep:rust_decimal",
    "sqlx/rust_decimal",
]
decimal-bigdecimal = [
    "cratestack-core/decimal-bigdecimal",
    "cratestack-sql/decimal-bigdecimal",
    "dep:bigdecimal",
    "sqlx/bigdecimal",
]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
cratestack-axum.workspace = true
cratestack-core.workspace = true
cratestack-policy.workspace = true
cratestack-sql.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }

[dev-dependencies]
