[package]
name = "cratestack-studio-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cratestack-core.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
cratestack-parser.workspace = true
tempfile = "3"
