[package]
name = "cratestack-studio-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Transitional shim — the studio generator has been replaced by the cratestack-studio binary. This crate currently only hosts the future `studio eject` path."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
