[package]
name = "cratestack-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CrateStack Studio — admin and testing surface for .cstack schemas, served as a local web app."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
cratestack-core.workspace = true
cratestack-migrate.workspace = true
cratestack-parser.workspace = true
cratestack-sql.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
