[package]
name = "cratestack-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CrateStack Studio — admin and testing surface for .cstack schemas, served as a local web app."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[features]
default = []
# Bundle the Leptos UI's Trunk output into the binary via `rust-embed`.
# Build prerequisites: `cargo install trunk`, `rustup target add
# wasm32-unknown-unknown`, then `trunk build --release` in
# `crates/cratestack-studio-ui/`. Without that artifact tree, building
# this feature will fail at the embed step with a clear error.
embed-ui = ["dep:rust-embed"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
cratestack-core.workspace = true
cratestack-migrate.workspace = true
cratestack-parser.workspace = true
cratestack-sql.workspace = true
flate2 = "1"
tar = "0.4"
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rust-embed = { workspace = true, optional = true, features = ["mime-guess", "interpolate-folder-path"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
toml.workspace = true
url.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
