[package]
name = "cratestack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["decimal-rust-decimal"]
decimal-rust-decimal = [
    "cratestack-core/decimal-rust-decimal",
    "cratestack-rusqlite/decimal-rust-decimal",
    "cratestack-sqlx/decimal-rust-decimal",
]
decimal-bigdecimal = [
    "cratestack-core/decimal-bigdecimal",
    "cratestack-rusqlite/decimal-bigdecimal",
    "cratestack-sqlx/decimal-bigdecimal",
]
# Replace the default `ring`-backed rustls provider with `aws-lc-rs`, which
# is the only provider with current FIPS 140-3 validation among the
# pure-Rust rustls backends. Selecting this feature does not make a build
# "FIPS-certified" — that requires the vendor's validated binary; it lets
# you compile and ship a binary that uses the validated crypto module.
crypto-aws-lc-rs = []

[dependencies]
chrono.workspace = true
cratestack-core.workspace = true
cratestack-macros.workspace = true
cratestack-parser.workspace = true
cratestack-policy.workspace = true
cratestack-rusqlite.workspace = true
cratestack-sql.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

# Server- and host-network-only crates — target-gated off on
# `wasm32-unknown-unknown` so the embedded path
# (`include_embedded_schema!`) can compile to WebAssembly without dragging
# `mio` / `tokio-net` / `sqlx-postgres` / hyper along for the ride.
#
# A future wasm-native HTTP client (over the JS `fetch` API, presumably) can
# expose `cratestack::client_rust` on `wasm32` too; for now embedded crates
# that need HTTP can call JS directly via `wasm-bindgen`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cratestack-axum.workspace = true
cratestack-client-rust.workspace = true
cratestack-sqlx.workspace = true

[dev-dependencies]
axum.workspace = true
cratestack-codec-cbor.workspace = true
cratestack-codec-json.workspace = true
minicbor-serde.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
