[package]
name = "embedded-browser-webpack-example"
version = "0.1.0"
edition = "2024"
publish = false
description = "Browser-targeted embedded SQLite example built on cratestack-rusqlite + include_embedded_schema!. Compiles to wasm32-unknown-unknown; the Webpack 5/TypeScript frontend loads the wasm bundle inside a Dedicated Worker and persists data via OPFS. Same Rust source as embedded-browser-vite — only the bundler differs."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { workspace = true }
cratestack = { package = "cratestack-sqlite", path = "../../crates/cratestack-sqlite", version = "0.4.3" }
cratestack-macros = { path = "../../crates/cratestack-macros", version = "0.4.3" }
cratestack-rusqlite = { path = "../../crates/cratestack-rusqlite", version = "0.4.3" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
